# kv-store

./: .gitignore  DEVELOPMENT.md  README.md  manifest.json  package.json  pnpm-lock.yaml
.husky/: pre-commit
app/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
app/src/: App.tsx
app/src/api/: AbiClient.ts  clientApi.ts
app/src/api/dataSource/: ClientApiDataSource.ts
app/src/constants/: en.global.json
app/src/pages/home/: index.tsx
app/src/pages/login/: Authenticate.tsx
logic/: Cargo.toml  build.rs  manifest.json
logic/js/: README.md  package.json  pnpm-lock.yaml
logic/js/src/: index.ts
logic/res/: kv_store.wasm
logic/rs/: Cargo.toml
scripts/: on-res-change.mjs
workflows/: workflow-example-js.yml  workflow-example-rs.yml
