[package]
name = "kv-store"
description = "Calimero KV Store application"
version = "0.2.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.56"
calimero-sdk = "0.2.5"
calimero-storage = "0.2.5"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
